LWCLearnwithFLOWOrg/force-app/main/default/objects/Opportunity_Stage_Change__c/Opportunity_Stage_Change__c.object-meta.xml
<CustomObject>
    <description>These detail records to Opportunity capture stage changes and how long an Opportunity was in a particular stage.</description>
    <label>Opportunity Stage Change</label>
    <nameField>
        <displayFormat>OSC-{000000}</displayFormat>
        <label>Opportunity Stage Change Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Stage Changes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>