LWCLearnwithFLOWOrg/force-app/main/default/objects/Opportunity_Stage_Change__c/fields/Days_in_Stage__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Stage__c</fullName>
    <description>AUTO - The number of days (either static or dynamic) in this stage.</description>
    <formula>IF(
   ISNULL(Exit_Date_Time__c),
   NOW() - Entry_Date_Time__c,
   Exit_Date_Time__c - Entry_Date_Time__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Stage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>