LWCLearnwithFLOWOrg/force-app/main/default/objects/Opportunity_Stage_Change__c/fields/Entry_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Entry_Date_Time__c</fullName>
    <description>AUTO - The date/time that this Opportunity entered this stage.</description>
    <label>Entry Date / Time</label>
    <type>DateTime</type>
</CustomField>