LWCLearnwithFLOWOrg/force-app/main/default/objects/Opportunity_Stage_Change__c/fields/Exit_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Exit_Date_Time__c</fullName>
    <description>AUTO - The time that this Opportunity exited this stage.</description>
    <label>Exit Date / Time</label>
    <type>DateTime</type>
</CustomField>