LWCLearnwithFLOWOrg/force-app/main/default/objects/Opportunity_Stage_Change__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>AUTO - The associated Opportunity.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Stage Changes</relationshipLabel>
    <relationshipName>Opportunity_Stage_Changes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>