LWCLearnwithFLOWOrg/force-app/main/default/objects/Opportunity_Stage_Change__c/fields/Previous_Stage__c.field-meta.xml
<CustomField>
    <fullName>Previous_Stage__c</fullName>
    <description>AUTO - The previous stage name.</description>
    <label>Previous Stage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>