LWCLearnwithFLOWOrg/force-app/main/default/objects/Opportunity_Stage_Change__c/fields/Previous_Stage_Number__c.field-meta.xml
<CustomField>
    <fullName>Previous_Stage_Number__c</fullName>
    <description>AUTO - The number of the previous stage.</description>
    <formula>VALUE(LEFT(Previous_Stage__c,1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Stage Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>