LWCLearnwithFLOWOrg/force-app/main/default/objects/Opportunity_Stage_Change__c/fields/Skipped_Stages__c.field-meta.xml
<CustomField>
    <fullName>Skipped_Stages__c</fullName>
    <description>AUTO - Indicates whether or not stages were skipped.</description>
    <formula>AND(
   NOT(Stage__c = &apos;Closed Won&apos;),
   NOT(Stage__c = &apos;Closed Lost&apos;),
   Stage_Number__c - Previous_Stage_Number__c &gt; 1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Skipped Stages?</label>
    <type>Checkbox</type>
</CustomField>