LWCLearnwithFLOWOrg/force-app/main/default/objects/Opportunity_Stage_Change__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>The new Stage that was entered.</description>
    <label>Stage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>